--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Inventarisasi Aset Sekolah</title>
+  <title>DAFTAR QR ASET PERALATAN MESIN (SATUAN PENDIDIKAN)</title>
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -28,7 +28,7 @@
         <tr>
           <th>No</th>
           <th>Nama Sekolah</th>
-          <th>Link Drive</th>
+          <th>Unduh Dokumen</th>
         </tr>
       </thead>
       <tbody></tbody>
