--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
     .eye-icon {
       font-size: 20px;
       text-decoration: none;
+    }
+    input::placeholder {
+      font-style: italic;
+    }
+    th, td {
+      white-space: nowrap;
     }
   </style>
 </head>
@@ -21,14 +28,19 @@
 
 <div class="container">
   <h2 class="text-2xl font-bold mb-4 text-center">Inventarisasi Aset Sekolah</h2>
+
+  <!-- Kolom Pencarian -->
+  <div class="mb-3">
+    <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="Cari nama sekolah..." class="form-control">
+  </div>
   
   <div class="table-responsive">
-    <table class="table table-striped table-bordered" id="asetTable">
+    <table class="table table-striped table-bordered align-middle text-sm" id="asetTable">
       <thead class="table-dark">
         <tr>
-          <th>No</th>
-          <th>Nama Sekolah</th>
-          <th>Unduh Dokumen</th>
+          <th class="text-center align-middle" style="width: 50px;">No</th>
+          <th style="width: 250px;">Nama Sekolah</th>
+          <th style="width: 130px;">Unduh Dokumen</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -46,6 +58,7 @@
   const url = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&sheet=${sheetName}`;
 
   let allData = [];
+  let filteredData = [];
   const rowsPerPage = 10;
   let currentPage = 1;
 
@@ -54,12 +67,14 @@
     .then(rep => {
       const json = JSON.parse(rep.substr(47).slice(0, -2));
       const rows = json.table.rows;
-      // Mulai dari baris ke-2 (index 1)
+
       for (let i = 1; i < rows.length; i++) {
         const namaSekolah = rows[i].c[0] ? rows[i].c[0].v : '';
         const linkDrive = rows[i].c[1] ? rows[i].c[1].v : '';
         allData.push({ namaSekolah, linkDrive });
       }
+
+      filteredData = [...allData];
       renderTable();
       renderPagination();
     });
@@ -70,21 +85,21 @@
 
     const start = (currentPage - 1) * rowsPerPage;
     const end = start + rowsPerPage;
-    const pageData = allData.slice(start, end);
+    const pageData = filteredData.slice(start, end);
 
     pageData.forEach((item, index) => {
       const tr = document.createElement("tr");
       tr.innerHTML = `
-        <td>${start + index + 1}</td>
+        <td class="text-center">${start + index + 1}</td>
         <td>${item.namaSekolah}</td>
-        <td><a href="${item.linkDrive}" target="_blank" class="eye-icon">👁</a></td>
+        <td class="text-center"><a href="${item.linkDrive}" target="_blank" class="eye-icon">👁</a></td>
       `;
       tableBody.appendChild(tr);
     });
   }
 
   function renderPagination() {
-    const totalPages = Math.ceil(allData.length / rowsPerPage);
+    const totalPages = Math.ceil(filteredData.length / rowsPerPage);
     const pagination = document.getElementById("pagination");
     pagination.innerHTML = "";
 
@@ -99,6 +114,16 @@
       };
       pagination.appendChild(btn);
     }
+  }
+
+  function filterTable() {
+    const query = document.getElementById("searchInput").value.toLowerCase();
+    filteredData = allData.filter(item =>
+      item.namaSekolah.toLowerCase().includes(query)
+    );
+    currentPage = 1;
+    renderTable();
+    renderPagination();
   }
 </script>
 
