--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body class="bg-gray-100 text-gray-800 p-4">
 
 <div class="container">
-  <h2 class="text-2xl font-bold mb-4 text-center">Inventarisasi Aset Sekolah</h2>
+  <h2 class="text-2xl font-bold mb-4 text-center">DAFTAR QR ASET PERALATAN MESIN (SATUAN PENDIDIKAN)</h2>
 
   <!-- Kolom Pencarian -->
   <div class="mb-3">
@@ -38,9 +38,9 @@
     <table class="table table-striped table-bordered align-middle text-sm" id="asetTable">
       <thead class="table-dark">
         <tr>
-          <th class="text-center align-middle" style="width: 50px;">No</th>
-          <th style="width: 250px;">Nama Sekolah</th>
-          <th style="width: 130px;">Unduh Dokumen</th>
+          <th class="text-center align-middle" style="width: 30px;">No</th>
+          <th class="text-center align-middle"style="width: 130px;">Nama Sekolah</th>
+          <th class="text-center align-middle"style="width: 130px;">Unduh Dokumen</th>
         </tr>
       </thead>
       <tbody></tbody>
