--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <th class="text-center align-middle" style="width: 30px;">No</th>
           <th class="text-center align-middle"style="width: 130px;">Nama Sekolah</th>
           <th class="text-center align-middle"style="width: 130px;">Unduh Dokumen</th>
+          <th class="text-center align-middle"style="width: 130px;">Kecamtan</th>
         </tr>
       </thead>
       <tbody></tbody>
