--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap CSS (Opsional jika mau pakai utility Tailwind saja) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
@@ -24,9 +24,19 @@
     }
   </style>
 </head>
-<body class="bg-gray-100 text-gray-800 p-4">
+<body class="bg-gray-100 text-gray-800">
 
-<div class="container">
+<!-- NAVBAR -->
+<nav class="bg-blue-600 text-white px-4 py-3 flex justify-between items-center shadow sticky top-0 z-50">
+  <div class="text-xl font-bold">DINAS PENDIDIKAN DAN KEBUDAYAAN</div>
+  <div class="space-x-4">
+    <a href="#" class="hover:underline">Data Aset</a>
+    <a href="#" class="hover:underline">Data Satuan Pendidikan</a>
+    <a href="#" class="hover:underline">Hubungi Kami</a>
+  </div>
+</nav>
+
+<div class="container mt-6">
   <h2 class="text-2xl font-bold mb-4 text-center">DAFTAR QR ASET PERALATAN MESIN (SATUAN PENDIDIKAN)</h2>
 
   <!-- Kolom Pencarian -->
