--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="text-xl font-bold">DINAS PENDIDIKAN DAN KEBUDAYAAN</div>
   <div class="space-x-4">
     <a href="#" class="hover:underline">Data Aset</a>
-    <a href="#" class="hover:underline">Data Satuan Pendidikan</a>
+    <a href="sekolah.html" class="hover:underline">Data Satuan Pendidikan</a>
     <a href="#" class="hover:underline">Hubungi Kami</a>
   </div>
 </nav>
