--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <nav class="bg-blue-600 text-white px-4 py-3 flex justify-between items-center shadow sticky top-0 z-50">
   <div class="text-xl font-bold">DINAS PENDIDIKAN DAN KEBUDAYAAN</div>
   <div class="space-x-4">
-    <a href="#" class="hover:underline">Data Aset</a>
+    <a href="index.html" class="hover:underline">Data Aset</a>
     <a href="sekolah.html" class="hover:underline">Data Satuan Pendidikan</a>
-    <a href="#" class="hover:underline">Hubungi Kami</a>
+    <a href="https://donggala.e-bmd.co.id/" class="hover:underline">E-BMD Donggala</a>
   </div>
 </nav>
 
