--- a/sekolah.html
+++ b/sekolah.html
@@ -25,9 +25,9 @@
     </button>
   </div>
   <div class="md:hidden hidden mt-2 space-y-2 px-2" id="mobileMenu">
-    <a href="#" class="block hover:underline">Data Aset</a>
+    <a href="index.html" class="block hover:underline">Data Aset</a>
     <a href="sekolah.html" class="block hover:underline">Data Satuan Pendidikan</a>
-    <a href="#" class="block hover:underline">Hubungi Kami</a>
+    <a href="https://donggala.e-bmd.co.id/" class="block hover:underline">E-BMD Donggala</a>
   </div>
 </nav>
 
@@ -75,7 +75,7 @@
 
   let allData = [];
   let filteredData = [];
-  const perPage = 10;
+  const perPage = 25;
   let currentPage = 1;
 
   function loadData() {
