--- a/sekolah.html
+++ b/sekolah.html
@@ -42,8 +42,9 @@
 <div class="p-4 flex flex-col items-center">
   <h1 class="text-2xl font-bold mb-4 text-center">Data Sekolah</h1>
 
-  <div class="w-full max-w-md mb-4">
-    <input type="text" id="searchInput" placeholder="Cari Nama Sekolah, NPSN, Kecamatan..." class="w-full p-2 border border-gray-300 rounded shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-400" oninput="applySearch()" />
+  <!-- Kolom Pencarian -->
+  <div class="mb-3">
+    <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="Cari nama sekolah..." class="form-control">
   </div>
 
   <div id="resultCount" class="text-sm text-gray-600 text-center mb-2"></div>
@@ -154,6 +155,15 @@
       `;
       tbody.insertAdjacentHTML('beforeend', rowHTML);
     });
+  }
+  function filterTable() {
+    const query = document.getElementById("searchInput").value.toLowerCase();
+    filteredData = allData.filter(item =>
+      item.namaSekolah.toLowerCase().includes(query)
+    );
+    currentPage = 1;
+    renderTable();
+    renderPagination();
   }
 
   function renderPagination() {
