--- a/sekolah.html
+++ b/sekolah.html
@@ -14,7 +14,7 @@
   <div class="max-w-7xl mx-auto flex items-center justify-between">
     <div class="text-xl font-bold">DINAS PENDIDIKAN DAN KEBUDAYAAN</div>
     <div class="hidden md:flex space-x-6">
-      <a href="index.html" class="hover:underline">Data Aset</a>
+      <a href="index.html" class="hover:underline">Beranda</a>
       <a href="sekolah.html" class="hover:underline">Data Satuan Pendidikan</a>
       <a href="https://donggala.e-bmd.co.id/" class="hover:underline">E-BMD Donggala</a>
     </div>
