--- a/index.html
+++ b/index.html
@@ -1,143 +1,250 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DAFTAR QR ASET PERALATAN MESIN (SATUAN PENDIDIKAN)</title>
+  <title>Data Aset SMPN 10 Banawa Selatan</title>
 
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Bootstrap CSS (Opsional jika mau pakai utility Tailwind saja) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <!-- Bootstrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Material Icons for menu icon -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <style>
-    .eye-icon {
-      font-size: 20px;
+    #sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      width: 16rem;
+      background-color: #000080;
+      color: white;
+      padding-top: 1rem;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      overflow-y: auto;
+      transition: transform 0.3s ease-in-out;
+      z-index: 1040;
+    }
+    #sidebar a {
+      color: white;
+      text-decoration: none;
+      display: block;
+      padding: 0.5rem 0;
+      border-radius: 0.25rem;
+    }
+    #sidebar a:hover {
+      background-color: rgba(255,255,255,0.15);
       text-decoration: none;
     }
-    input::placeholder {
-      font-style: italic;
+    #sidebarToggleBtn {
+      position: fixed;
+      top: 0.5rem;
+      left: 0.5rem;
+      z-index: 1100;
+      background: none;
+      border: none;
+      color: #000080;
+      font-size: 2rem;
+      display: none;
     }
-    th, td {
-      white-space: nowrap;
+    @media (min-width: 768px) {
+      body { padding-left: 16rem; padding-top: 1rem; }
+    }
+    @media (max-width: 767.98px) {
+      #sidebar { transform: translateX(-100%); }
+      #sidebar.show { transform: translateX(0); }
+      #sidebarToggleBtn { display: block; }
+      body { padding-left: 0; padding-top: 3.5rem; }
+    }
+    body { padding-top: 1rem; }
+    .thumbnail {
+      max-width: 100px;
+      max-height: 100px;
+      object-fit: contain;
     }
   </style>
 </head>
-<body class="bg-gray-100 text-gray-800">
-
-<!-- NAVBAR -->
-<nav class="bg-blue-600 text-white px-4 py-3 flex justify-between items-center shadow sticky top-0 z-50">
-  <div class="text-xl font-bold">DINAS PENDIDIKAN DAN KEBUDAYAAN</div>
-  <div class="space-x-4">
-    <a href="index.html" class="hover:underline">Beranda</a>
-    <a href="sekolah.html" class="hover:underline">Data Satuan Pendidikan</a>
-    <a href="https://donggala.e-bmd.co.id/" class="hover:underline">E-BMD Donggala</a>
+<body>
+  <nav id="sidebar"><h5 class="text-white mb-4">Inventaris SMPN 10</h5>
+    <a href="ruangankantor.html"><i class="bi bi-building me-2"></i> Ruangan Kantor</a>
+    <a href="ruanganperpustakaan.html"><i class="bi bi-book me-2"></i> Ruangan Perpustakaan</a>
+    <a href="qrcode2.html"><i class="bi bi-qr-code me-2"></i> QR CODE</a>
+  </nav>
+  <button id="sidebarToggleBtn"><span class="material-icons">menu</span></button>
+  <div class="container">
+    <h2 class="mb-4">Data Aset Peralatan dan Mesin Dinas Pendidikan dan Kebudayaan</h2>
+    <div class="row mb-3">
+      <div class="col-md-6 mb-2"><input type="text" id="searchInput" class="form-control" placeholder="Cari data..." /></div>
+      <div class="col-md-6 mb-2"><select id="kecamatanFilter" class="form-select"><option value="">Semua Kecamatan</option></select></div>
+    </div>
+    <div class="table-responsive">
+      <table class="table table-bordered table-striped align-middle">
+        <thead id="tableHead" class="table-light"></thead>
+        <tbody id="tableBody"></tbody>
+      </table>
+    </div>
+    <nav><ul class="pagination justify-content-center" id="pagination"></ul></nav>
   </div>
-</nav>
-
-<div class="container mt-6">
-  <h2 class="text-2xl font-bold mb-4 text-center">DAFTAR QR ASET PERALATAN MESIN (SATUAN PENDIDIKAN)</h2>
-
-  <!-- Kolom Pencarian -->
-  <div class="mb-3">
-    <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="Cari nama sekolah..." class="form-control">
+  <div class="modal fade" id="previewModal" tabindex="-1">
+    <div class="modal-dialog modal-fullscreen modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header"><h5 class="modal-title">Preview Dokumen</h5><button type="button" class="btn-close" data-bs-dismiss="modal"></button></div>
+        <div class="modal-body"><div class="row g-3" id="previewContentRow"></div></div>
+      </div>
+    </div>
   </div>
-  
-  <div class="table-responsive">
-    <table class="table table-striped table-bordered align-middle text-sm" id="asetTable">
-      <thead class="table-dark">
-        <tr>
-          <th class="text-center align-middle" style="width: 30px;">No</th>
-          <th class="text-center align-middle" style="width: 130px;">Nama Sekolah</th>
-          <th class="text-center align-middle" style="width: 130px;">Unduh Dokumen</th>
-          <th class="text-center align-middle" style="width: 130px;">Kecamatan</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
-  <!-- Pagination -->
-  <div class="flex justify-center mt-4" id="pagination"></div>
-</div>
-
-<script>
-  const sheetID = '1gqpPX2e6LkED0r7Jw5xThVjGP7xX8k_AtyDAT5-31E4';
-  const sheetName = 'Sheet1';
-  const url = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&sheet=${sheetName}`;
-
-  let allData = [];
-  let filteredData = [];
-  const rowsPerPage = 10;
-  let currentPage = 1;
-
-  fetch(url)
-    .then(res => res.text())
-    .then(rep => {
-      const json = JSON.parse(rep.substr(47).slice(0, -2));
-      const rows = json.table.rows;
-
-      for (let i = 1; i < rows.length; i++) {
-        const namaSekolah = rows[i].c[0]?.v || '';
-        const linkDrive   = rows[i].c[1]?.v || '';
-        const kecamatan   = rows[i].c[2]?.v || '';
-        allData.push({ namaSekolah, linkDrive, kecamatan });
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const sidebar = document.getElementById('sidebar');
+    const sidebarToggleBtn = document.getElementById('sidebarToggleBtn');
+    sidebarToggleBtn.addEventListener('click', () => { sidebar.classList.toggle('show'); });
+    document.addEventListener('click', (e) => {
+      if (!sidebar.contains(e.target) && !sidebarToggleBtn.contains(e.target) && window.innerWidth < 768) {
+        sidebar.classList.remove('show');
       }
+    });
 
-      filteredData = [...allData];
+    const sheetID = "152oNQyrJEeg-xW3okB2LKbGIUapxDakDMCbDjqpDl3U";
+    const sheetURL = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&gid=0`;
+    let fullData = [], filteredData = [], headers = [], currentPage = 1;
+    const rowsPerPage = 40;
+
+    fetch(sheetURL).then(res => res.text()).then(text => {
+      const json = JSON.parse(text.substr(47).slice(0, -2));
+      headers = json.table.cols.map(col => col.label);
+      fullData = json.table.rows.map(row => row.c.map(cell => (cell ? cell.v : "")));
+      filteredData = [...fullData];
+      renderTableHeader();
+      renderFilterOptions();
+      applyFilters();
+    });
+
+    function renderTableHeader() {
+      document.getElementById("tableHead").innerHTML = "<tr>" + headers.map(h => `<th>${h}</th>`).join('') + "<th>Preview Semua</th></tr>";
+    }
+    function extractDriveFileId(url) {
+      const match = url.match(/[-\w]{25,}/);
+      return match ? match[0] : "";
+    }
+    function getFileTypeIcon(url) {
+      const lower = url.toLowerCase();
+      if (lower.includes(".pdf")) return { icon: "bi-file-earmark-pdf", color: "danger", label: "PDF" };
+      if (lower.includes(".doc")) return { icon: "bi-file-earmark-word", color: "primary", label: "Word" };
+      if (lower.includes(".xls")) return { icon: "bi-file-earmark-excel", color: "success", label: "Excel" };
+      if (lower.includes(".jpg") || lower.includes(".png")) return { icon: "bi-file-earmark-image", color: "info", label: "Gambar" };
+      return { icon: "bi-file-earmark", color: "secondary", label: "Dokumen" };
+    }
+    function renderTable() {
+      const tbody = document.getElementById("tableBody");
+      tbody.innerHTML = "";
+      const start = (currentPage - 1) * rowsPerPage;
+      const end = start + rowsPerPage;
+      const pageData = filteredData.slice(start, end);
+      pageData.forEach(row => {
+        const tr = document.createElement("tr");
+        row.forEach((cell, i) => {
+          const td = document.createElement("td");
+          const header = headers[i].toLowerCase();
+          const isDriveLink = typeof cell === "string" && cell.includes("drive.google.com");
+          const isFolderLink = typeof cell === "string" && cell.includes("/drive/folders/");
+          if (isDriveLink) {
+            const fileId = extractDriveFileId(cell);
+            const isFolder = isFolderLink;
+            const fileInfo = getFileTypeIcon(cell);
+            const label = headers[i];
+            if (isFolder) {
+              td.innerHTML = `<div class="d-flex flex-column align-items-start"><i class="bi bi-folder-fill fs-3 text-warning mb-1"></i>
+              <a href="${cell}" target="_blank" class="btn btn-sm btn-outline-success mb-1">Buka Folder <i class="bi bi-box-arrow-up-right"></i></a></div>`;
+            } else {
+              td.innerHTML = `<div class="d-flex flex-column align-items-start">
+                <img src="https://drive.google.com/thumbnail?id=${fileId}" class="thumbnail rounded border mb-1" />
+                <span class="badge bg-${fileInfo.color}" data-bs-toggle="tooltip" title="${fileInfo.label}">
+                <i class="bi ${fileInfo.icon}"></i> ${fileInfo.label}</span>
+                <button class="btn btn-sm btn-outline-primary mt-2" onclick="openPreviewModalGrid([{label: '${label}', fileId: '${fileId}'}])">Preview</button>
+                <a href="https://drive.google.com/uc?export=download&id=${fileId}" class="btn btn-sm btn-outline-secondary mt-1">Unduh</a></div>`;
+            }
+          } else { td.textContent = cell; }
+          tr.appendChild(td);
+        });
+        const previewAllTd = document.createElement("td");
+        const fileObjs = row.map((cell, i) => {
+          const isDrive = typeof cell === "string" && cell.includes("drive.google.com") && !cell.includes("/folders/");
+          if (!isDrive) return null;
+          return { fileId: extractDriveFileId(cell), label: headers[i] };
+        }).filter(Boolean);
+        previewAllTd.innerHTML = fileObjs.length ? `<button class="btn btn-sm btn-dark" onclick='openPreviewModalGrid(${JSON.stringify(fileObjs)})'>Preview Semua</button>` : "-";
+        tr.appendChild(previewAllTd);
+        tbody.appendChild(tr);
+      });
+    }
+    function renderPagination() {
+      const totalPages = Math.ceil(filteredData.length / rowsPerPage);
+      const pagination = document.getElementById("pagination");
+      pagination.innerHTML = "";
+      const prevLi = document.createElement("li");
+      prevLi.className = `page-item ${currentPage === 1 ? "disabled" : ""}`;
+      prevLi.innerHTML = `<button class="page-link">&laquo; Sebelumnya</button>`;
+      prevLi.onclick = () => { if (currentPage > 1) { currentPage--; renderTable(); renderPagination(); }};
+      pagination.appendChild(prevLi);
+      for (let i = 1; i <= totalPages; i++) {
+        const li = document.createElement("li");
+        li.className = `page-item ${i === currentPage ? "active" : ""}`;
+        li.innerHTML = `<button class="page-link">${i}</button>`;
+        li.onclick = () => { currentPage = i; renderTable(); renderPagination(); };
+        pagination.appendChild(li);
+      }
+      const nextLi = document.createElement("li");
+      nextLi.className = `page-item ${currentPage === totalPages ? "disabled" : ""}`;
+      nextLi.innerHTML = `<button class="page-link">Berikutnya &raquo;</button>`;
+      nextLi.onclick = () => { if (currentPage < totalPages) { currentPage++; renderTable(); renderPagination(); }};
+      pagination.appendChild(nextLi);
+    }
+    function applyFilters() {
+      const searchValue = document.getElementById("searchInput").value.toLowerCase();
+      const selectedKecamatan = document.getElementById("kecamatanFilter").value.toLowerCase();
+      const kecamatanIndex = headers.findIndex(h => h.toLowerCase().includes("kecamatan"));
+      const namaSekolahIndex = headers.findIndex(h => h.toLowerCase().includes("nama sekolah"));
+      filteredData = fullData.filter(row => {
+        const matchesSearch = namaSekolahIndex !== -1
+          ? (row[namaSekolahIndex] || "").toString().toLowerCase().includes(searchValue)
+          : row.some(cell => (cell || "").toString().toLowerCase().includes(searchValue));
+        let matchesKecamatan = true;
+        if (selectedKecamatan && kecamatanIndex !== -1) {
+          matchesKecamatan = (row[kecamatanIndex] || "").toString().toLowerCase().trim() === selectedKecamatan;
+        }
+        return matchesSearch && matchesKecamatan;
+      });
+      currentPage = 1;
       renderTable();
       renderPagination();
-    });
-
-  function renderTable() {
-    const tableBody = document.querySelector("#asetTable tbody");
-    tableBody.innerHTML = "";
-
-    const start = (currentPage - 1) * rowsPerPage;
-    const end = start + rowsPerPage;
-    const pageData = filteredData.slice(start, end);
-
-    pageData.forEach((item, index) => {
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
-        <td class="text-center">${start + index + 1}</td>
-        <td>${item.namaSekolah}</td>
-        <td class="text-center"><a href="${item.linkDrive}" target="_blank" class="eye-icon">👁</a></td>
-        <td class="text-center">${item.kecamatan}</td>
-      `;
-      tableBody.appendChild(tr);
-    });
-  }
-
-  function renderPagination() {
-    const totalPages = Math.ceil(filteredData.length / rowsPerPage);
-    const pagination = document.getElementById("pagination");
-    pagination.innerHTML = "";
-
-    for (let i = 1; i <= totalPages; i++) {
-      const btn = document.createElement("button");
-      btn.textContent = i;
-      btn.className = `mx-1 px-3 py-1 rounded border ${i === currentPage ? 'bg-blue-500 text-white' : 'bg-white text-black'}`;
-      btn.onclick = () => {
-        currentPage = i;
-        renderTable();
-        renderPagination();
-      };
-      pagination.appendChild(btn);
     }
-  }
-
-  function filterTable() {
-    const query = document.getElementById("searchInput").value.toLowerCase();
-    filteredData = allData.filter(item =>
-      item.namaSekolah.toLowerCase().includes(query)
-    );
-    currentPage = 1;
-    renderTable();
-    renderPagination();
-  }
-</script>
-
+    function renderFilterOptions() {
+      const kecamatanIndex = headers.findIndex(h => h.toLowerCase().includes("kecamatan"));
+      const kecamatanSet = new Set(fullData.map(row => row[kecamatanIndex]).filter(Boolean));
+      const select = document.getElementById("kecamatanFilter");
+      Array.from(kecamatanSet).sort().forEach(kec => {
+        const option = document.createElement("option");
+        option.value = kec; option.textContent = kec;
+        select.appendChild(option);
+      });
+    }
+    function openPreviewModalGrid(fileObjs) {
+      const container = document.getElementById("previewContentRow");
+      container.innerHTML = "";
+      fileObjs.forEach(obj => {
+        const col = document.createElement("div");
+        col.className = "col-md-6";
+        col.innerHTML = `<div class="border rounded p-2 shadow-sm"><h6>${obj.label}</h6>
+          <iframe src="https://drive.google.com/file/d/${obj.fileId}/preview" class="w-100" style="height: 600px; border: none;"></iframe></div>`;
+        container.appendChild(col);
+      });
+      new bootstrap.Modal(document.getElementById("previewModal")).show();
+    }
+    document.getElementById("searchInput").addEventListener("input", applyFilters);
+    document.getElementById("kecamatanFilter").addEventListener("change", applyFilters);
+  </script>
 </body>
 </html>
