--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Data Aset SMPN 10 Banawa Selatan</title>
+  <title>Data Aset Dinas Pendidikan Dan Kebudayaan</title>
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -68,14 +68,14 @@
   </style>
 </head>
 <body>
-  <nav id="sidebar"><h5 class="text-white mb-4">Inventaris SMPN 10</h5>
-    <a href="ruangankantor.html"><i class="bi bi-building me-2"></i> Ruangan Kantor</a>
-    <a href="ruanganperpustakaan.html"><i class="bi bi-book me-2"></i> Ruangan Perpustakaan</a>
-    <a href="qrcode2.html"><i class="bi bi-qr-code me-2"></i> QR CODE</a>
+  <nav id="sidebar"><h5 class="text-white mb-4">Inventarisasi 2025</h5>
+    <a href="#"><i class="bi bi-building me-2"></i> Data KIB B</a>
+    <a href="#"><i class="bi bi-book me-2"></i> Data KIB C</a>
+    <a href="qrcode2.html"><i class="bi bi-qr-code me-2"></i> Barcode Peralatan dan Mesin</a>
   </nav>
   <button id="sidebarToggleBtn"><span class="material-icons">menu</span></button>
   <div class="container">
-    <h2 class="mb-4">Data Aset Peralatan dan Mesin Dinas Pendidikan dan Kebudayaan</h2>
+    <h2 class="mb-4">Barcode Peralatan dan Mesin Dinas Pendidikan dan Kebudayaan</h2>
     <div class="row mb-3">
       <div class="col-md-6 mb-2"><input type="text" id="searchInput" class="form-control" placeholder="Cari data..." /></div>
       <div class="col-md-6 mb-2"><select id="kecamatanFilter" class="form-select"><option value="">Semua Kecamatan</option></select></div>
